# Chess-GUI-CPP

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Figure.h  FigurePawn.cpp  FigurePawn.h  GuiGameContr.java  main.cpp
common/: Board.cpp  Board.h  CMakeLists.txt  Field.cpp  Field.h  Figure.h  FigureBishop.cpp  FigureBishop.h  FigureKing.cpp  FigureKing.h  FigureKnight.cpp  FigureKnight.h  FigurePawn.cpp  FigurePawn.h  FigureQueen.cpp  FigureQueen.h  FigureRook.cpp  FigureRook.h  FiguresManager.cpp  FiguresManager.h  Game.h  GameChess.cpp  GameChess.h  MovementManager.cpp  MovementManager.h  Notation.cpp  Notation.h  NotationMovement.cpp  NotationMovement.h  main.cpp
common/chess/: boardwidget.cpp  boardwidget.h  boardwidget.ui  chess.pro  chesswidget.cpp  chesswidget.h  chesswidget.ui  mainwindow.cpp  mainwindow.h  resources.qrc
notations/: subor1.xml  subor5.txt
odovzdanie/: Makefile  README.txt
odovzdanie/doc/: Doxyfile
odovzdanie/examples/: MatBlaznu.txt  NesmrtelnaPartie.txt  SustrMat.txt  fakeMat.txt  subor1.txt  subor4.txt
odovzdanie/src/: chess.pro
src/console/: consoleTest.pro  main.cpp  ui.cpp  ui.h
src/gui/: boardwidget.cpp  boardwidget.h  chess.pro  chesstypes.h  chesswidget.cpp  chesswidget.h  chesswidget.ui  guiinterface.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newfiguredialog.cpp  newfiguredialog.h  newfiguredialog.ui
src/logic/: Board.cpp  Board.h  Field.cpp  Field.h  Figure.h  FigureBishop.cpp  FigureBishop.h  FigureKing.cpp  FigureKing.h  FigureKnight.cpp  FigureKnight.h  FigurePawn.cpp  FigurePawn.h  FigureQueen.cpp  Game.h  (+16 more)
(+48 files in other folders)
